syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.cpdss.common.generated";

// import common definitions like ResponseStatus
import "common.proto";

service LoadablePlanService {
	rpc CallAlgo (AlgoRequest) returns (AlgoReply) {
	}
}	
	message AlgoRequest {
	int64 loadableStudyId = 1;
	}

	message AlgoReply {
	ResponseStatus responseStatus = 1;
 	}
